# iwr-project-ci-and-testing

./: .gitignore  .pytensorrc  COPYING.md  FILESTRUCTURE.md  README.md  README_attrici.md  TODO.md  create_masks.py  interpolate_parameters.py  merge_cfact.py  merge_data.py  pyproject.toml  run_estimation.py  run_estimation_load.py  run_estimation_write.py  run_single_cell.py  settings.py  submit.sh  write_netcdf.py
.github/workflows/: ci.yml  ci_withcomments.yml
attrici/: _version.py  datahandler.py  distributions.py  estimator.py  estimator_write.py  interpolate_parameters.py  models.py  postprocess.py
attrici/sanity_check/: merge_files.py  sanity_check.py
bias_comparison/: overview_interpolation.html  quick_overview_bias_interpolation.html
demo_input/ERA5/: era5_ssa_gmt.nc4
demo_input/ERA5/00003/: landmask_00003_demo.nc
doc/: api.rst  conf.py  index.rst
examples/: tas_example.ipynb
iwrprojectautomatedtestingandcontinuousintegration/: __init__.py
jupyter_notebooks/: Test writing parameters into a single file.ipynb  overview_interpolation.ipynb
notebooks/: create_binary_mask.ipynb  demo.ipynb  merge_cfact.ipynb  postprocess.ipynb
preprocessing/: binary_mask.py  calc_gmt_by_ssa.py  create_masks.py  merge_data.py  rechunk.sh  submit_subset_data.sh  subset_data.py
scripts/: binary_mask.py  merge_submit.sh  run_estimation.py  settings.py  submit_calc_gmt_by_ssa.sh
scripts/attrici/: distributions.py  estimator.py
scripts/preprocessing/: binary_mask.py  calc_gmt_by_ssa.py  create_landseamask_crop_meteofile.py
scripts_loadParameters/: calc_gmt_by_ssa.py  mask_interpolated_parameterfile.py  merge_cfact.py  run_estimation.py  settings.py  submit.sh  submit_31.sh
scripts_loadParameters/attrici/: distributions.py  estimator.py  estimator_write.py  postprocess.py
scripts_loadParameters/preprocessing/: binary_mask.py  submit_rechunk.sh
scripts_writeParameters/: mask_interpolated_parameterfile.py  merge_cfact.py  run_estimation.py  settings.py  submit.sh
scripts_writeParameters/attrici/: distributions.py  estimator.py  postprocess.py
scripts_writeParameters/preprocessing/: submit_calc_gmt_by_ssa.sh
test_input/: landseamask_sub40.nc
test_input/ERA5/testarea_31/: b_mask_31.nc  landseamask_31_setctomiss.nc  landseamask_31_setmissval.nc
test_input/GSWP3-W5E5/: binary_mask_19.nc  landmask_for_testing.nc  landmask_for_testing_19.nc  landseamask_sub40_modified.nc
test_input/GSWP3-W5E5/testarea_16/: b_mask_for_interpolation_16.nc  b_mask_for_interpolation_16_0.nc  (+5 more)
test_output_correlation/: tas_trace_shape19_hpc_2.nc4
tests/: test_interpolate_parameters.ipynb  test_interpolate_parameters.py  test_iwrprojectautomatedtestingandcontinuousintegration.py  test_merge_cfact  test_merge_cfact.ipynb  test_merge_cfact.py  test_merge_data  test_merge_data.py  tests.py  todo_test_merge_data.ipynb
(+20 files in other folders)
