[tool.poetry]
name = "iwr-project-attrici"
version = "0.0.1"
description = "CI and automated testing integration for attrici, IWR project"
authors = ["Anna Buch <a.buch@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{include = "iwr_project_attrici"}]

[tool.poetry.dependencies]
python = "^3.10.11"
pymc = "^5.3.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
netcdf4 = "^1.6.3"
matplotlib = "^3.7.2"
arviz = "^0.16.1"
func-timeout = "^4.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
