[tool.poetry]
name = "iwr-project-attrici"
version = "0.0.1"
description = "CI and automated testing integration for attrici, IWR project"
authors = ["Anna Buch <a.buch@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{include = "iwr_project_attrici"}]

[tool.poetry.dependencies]
python = "^3.10.11"
pymc = "^5.3.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
netcdf4 = "^1.6.3"
matplotlib = "^3.7.2"
arviz = "^0.16.1"
func-timeout = "^4.3.5"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ruff = "^0.0.275"

[tool.black]
line-length = 150

[tool.ruff]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]
fix = true
ignore = ["C901", "E714", "I001"]
exclude = [".venv", ".json", ".ipynb", "versioneer.py"]
line-length = 150  # Same as Black


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
