[tool.poetry]
name = "attrici"
## name = "iwr_project_attrici"
version = "0.0.1"
description = "CI and automated testing integration for attrici, IWR project"
authors = ["Anna Buch <a.buch@stud.uni-heidelberg.de>"]
readme = "README.md"
### packages = [{include = "iwr_project_attrici"}]

[tool.poetry.dependencies]
python = "^3.10.11"
pymc = "^5.3.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
netcdf4 = "^1.6.3"
matplotlib = "^3.7.2"
arviz = "^0.16.1"
func-timeout = "^4.3.5"
pytest = "^7.4.4"
pip = "^23.3.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ruff = "^0.0.275"

[tool.black]
line-length = 150

[tool.ruff]
select = [
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
    "W",    # pycodestyle Warning
    "C90",  # mccabe
]
fix = true
ignore = ["C901", "E714", "I001"]
exclude = [".venv", ".json", ".ipynb", "versioneer.py"]
line-length = 150  # Same as Black

[tool.ruff.per-file-ignores] #  "N",  # pep8-nameing
"tests/tests.py" = ["E402"]
"attrici/sanity_check/visual_check.py" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
